--- a/slider/index.html
+++ b/slider/index.html
@@ -29,5 +29,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
