--- a/clock/index.html
+++ b/clock/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+    <link rel="stylesheet" href="./style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
@@ -10,5 +11,7 @@
 
     <canvas id="canvas" width="600" height="600"> </canvas>
     
+
+    <script src="./script.js"></script>
 </body>
 </html>
